fixed menu dropdown indicators not showing

--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -362,7 +362,8 @@
 
         > a:after {
           content: '\f107';
-          font-family: "FontAwesome";
+          font-family: "Font Awesome 5 Free";
+          font-weight: 900;
           position: relative;
           margin-left: 3px;
           line-height: 1;
