--- a/sass/_menu_secondary.scss
+++ b/sass/_menu_secondary.scss
@@ -136,7 +136,8 @@
 
         > a:after {
           content: '\f107';
-          font-family: "FontAwesome";
+          font-family: "Font Awesome 5 Free";
+          font-weight: 900;
           display: inline-block;
           position: relative;
           margin-left: 3px;
